# flake8-mypy

./: .gitignore  README.md  flake8_mypy.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_mypy.py  test_via_pytest.py
