[tool.poetry]
name = "flake8-mypy"
version = "17.8.0"
description = ""
authors = ["Vladimir Kamarzin <vvk@vvk.pp.ru>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-flake8-path = "^1.1.0"
mypy = "^0.910"
six = "^1.16.0"
types-six = "^1.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
